Corrigindo Bugs da primeira versão

--- a/about.html
+++ b/about.html
@@ -15,7 +15,35 @@
         <div class="container-header">
             <div class="logo">
                 <img src="./img/logo png.png" alt="logo do site coding Craft">
-                <h1>Coding Craft</h1>
+                <h1 id="tituloHeader" >Coding Craft</h1>
+            </div>
+            <div class="menu-hamburguer">
+                <input type="checkbox" id="menu" class="lista-menu">
+                <label for="menu">
+                    <i class="bi bi-list" id="menu"></i>
+                </label>
+                <ul class="lista-menu__lista">
+                    <li class="lista-menu__lista__titulo">
+                        <h2>
+                            CATEGORIAS
+                        </h2>
+                    </li>
+                    <li class="lista-menu__lista__item">
+                        <a href="index.html">
+                            Inicio
+                        </a>
+                    </li>
+                    <li class="lista-menu__lista__item">
+                        <a href="#">
+                            Nosso Projeto
+                        </a>
+                    </li>
+                    <li class="lista-menu__lista__item">
+                        <a href="about.html">
+                            Sobre
+                        </a>
+                    </li>
+                </ul>
             </div>
             <div class="header-center">
                 <a href="index.html" class="dropbtn-home">Inicio</a>
@@ -61,13 +89,18 @@
             </p>
         </div>
         <div class="footer-container2">
-            <i class="bi bi-github"></i>
+            <a href="https://github.com/VHThor">
+    
+                <i class="bi bi-github"></i>
+            </a>
             <p>
                 vh_thor
             </p>
         </div>
         <div class="footer-container3">
-            <i class="bi bi-instagram"></i>
+            <a href="https://www.instagram.com/fala_vittin/">
+                <i class="bi bi-instagram"></i>
+            </a>
             <p>
                 @fala_vittin
             </p>
