--- a/index.html
+++ b/index.html
@@ -134,13 +134,18 @@
         </p>
     </div>
     <div class="footer-container2">
-        <i class="bi bi-github"></i>
+        <a href="https://github.com/VHThor">
+
+            <i class="bi bi-github"></i>
+        </a>
         <p>
             vh_thor
         </p>
     </div>
     <div class="footer-container3">
-        <i class="bi bi-instagram"></i>
+        <a href="https://www.instagram.com/fala_vittin/">
+            <i class="bi bi-instagram"></i>
+        </a>
         <p>
             @fala_vittin
         </p>
